--- a/order-service.yml
+++ b/order-service.yml
@@ -42,7 +42,9 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     admin:
-      enabled: false   # until Kafka is stable
+      enabled: false
+    listener:
+      auto-startup: false
     consumer:
       group-id: ${spring.application.name}
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
