--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,17 @@
+# eureka config
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+# actuator config
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        
+# zipkin config
+management.tracing.sampling.probability: 1.0
+spring.zipkin.baseUrl: http://localhost: 9411
 
