--- a/booking-service.properties
+++ b/booking-service.properties
@@ -1,1 +1,15 @@
+server.servlet.context-path=/book
+server.port=9004
 
+#DB configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/sagapattern
+spring.datasource.username=root
+spring.datasource.password=T#9748@qlph
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
